This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

05-Jul-2003 (Lars Duening)  (3.3.470)
  - (smalloc.c) Reduced the computational overhead of the small block
       defragmentation: since only newly freed blocks offer opportunities
       for defragmentation, only those are checked.
  - (object.c) Saving an object in the old format ('0') still used the
       shared value syntax for strings (reported by Bardioc).

31-Jul-2003 (Lars Duening)  (3.3.469)
  - (smalloc.c) Splitting of a block from a larger free list failed
       to preserve the PREV_BLOCK flag in the returned block, causing
       the defragmentation to malfunction on occasion (Mantis #0000007)

29-Jul-2003 (Lars Duening)  (3.3.468)
  - (smalloc.c) The small-block defragmentation clobbered an important
       flag in some blocks, causing the driver to crash (reported by Bardioc).
  - (smalloc.c) Reduced the amount of freelist-linking done for
       non-defragmentable blocks.

28-Jul-2003 (Lars Duening)  (3.3.467)
  - (prolang.y) If a pragma requires a function return type, the error
       message now names the active pragma in question instead of always
       'strict_types' (Mantis #0000003)
  - (comm.c) In charmode, CR and LF are treated as normal data
       characters (Mantis #0000002).

26-Jul-2003 (Lars Duening)  (3.3.466)
  - (mapping.c) Taking a cue from 3.2.10-594, the number of times a mapping
       is checked for destructed elements has been reduced. This was less of
       a problem than in 3.2.10, but still occured far too often,
  - (mapping.c) The mapping compaction criterium has been extended to
       guarantee a compaction after 2 * TIME_TO_COMPACT seconds idle time.

25-Jul-2003 (Lars Duening)  (3.3.465)
  - (mudlib/dhrystone.c) The time measurement was off by factor 10.
  - (smalloc.c) Implemented a lazy defragmentation scheme for the
       free small blocks.
