@@ -63,13 +63,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 470)
-(Parent-Version lpmud 3-3 469)
-(Version-Log "Reduced the computational overhead in defragmentation.
-Corrected the format-0 saving of strings in save_object().")
+(Project-Version lpmud 3-3 471)
+(Parent-Version lpmud 3-3 470)
+(Version-Log "Made the mySQL recognition more robust.")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 05 Aug 2003 19:31:36 -0600")
+(Checkin-Time "Thu, 07 Aug 2003 21:15:08 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -107,20 +106,20 @@ Corrected the format-0 saving of strings in save_object().")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.67 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.533 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.534 644))
   (HISTORY (lpmud/f/49_HISTORY 1.329 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
   ;; Configuration
-  (src/configure (lpmud/d/0_configure 1.19.1.83 755))
+  (src/configure (lpmud/d/0_configure 1.19.1.84 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.34 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.6 644))
-  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.19 644))
+  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.19.1.20 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
-  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.73 644))
+  (src/autoconf/configure.in (lpmud/d/7_configure. 1.20.1.9.1.74 644))
   (src/autoconf/acconfig.h (lpmud/d/10_acconfig.h 1.6.1.6 644))
 
   (src/settings/README (lpmud/c/22_README 1.14.1.15 644))
@@ -200,7 +199,7 @@ Corrected the format-0 saving of strings in save_object().")
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.57 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.43 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.44 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.73 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
@@ -266,8 +265,8 @@ Corrected the format-0 saving of strings in save_object().")
   (src/pkg-alists.h (lpmud/l/39_pkg-alists 1.3 644))
   (src/pkg-mccp.h (lpmud/d/b/48_pkg-mccp.h 1.1 644))
   (src/pkg-mccp.c (lpmud/d/b/49_pkg-mccp.c 1.3 644))
-  (src/pkg-mysql.c (lpmud/j/1_pkg-mysql. 1.19 644))
-  (src/pkg-mysql.h (lpmud/j/2_pkg-mysql. 1.3 644))
+  (src/pkg-mysql.c (lpmud/j/1_pkg-mysql. 1.20 644))
+  (src/pkg-mysql.h (lpmud/j/2_pkg-mysql. 1.4 644))
   (src/pkg-pcre.h (lpmud/a/b/7_pkg-pcre.h 1.1 644))
   (src/pkg-pcre.c (lpmud/q/48_pcre-pcre. 1.5 644))
   (src/pkg-pgsql.c (lpmud/d/b/39_pkg-pgsql. 1.2 644))
@@ -337,7 +336,7 @@ Corrected the format-0 saving of strings in save_object().")
   (src/hosts/be/config.h (lpmud/e/34_config.h 1.32.1.37 644))
   (src/hosts/be/be.h (lpmud/e/35_be.h 1.7 644))
   (src/hosts/be/beyacc (lpmud/i/39_beyacc 1.1 744))
-  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.71.1.16 644))
+  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.71.1.17 644))
   (src/hosts/be/icon-32x32.raw (lpmud/s/37_icon-32x32 1.1 644) :no-keywords)
   (src/hosts/be/icon-16x16.raw (lpmud/s/38_icon-16x16 1.1 644) :no-keywords)
   (src/hosts/be/driver.rsrc (lpmud/s/39_driver.rsr 1.1 644) :no-keywords)
