@@ -8,6 +8,7 @@
 
 /* --- Prototypes --- */
 
+extern Bool pkg_mysql_init (void);
 extern svalue_t *f_db_affected_rows(svalue_t *sp);
 extern svalue_t *f_db_conv_string(svalue_t *sp);
 extern svalue_t *v_db_connect(svalue_t *sp, int num_args);
